# PyTotal

./: .gitignore  README.md  pyproject.toml  setup.py
Total5/: __init__.py  core.py
tests/: test_core.py
