[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Total5"
version = "0.0.1"
description = "Total.js v5 integration (Pypeline) with Python"
authors = [{ name = "Peter Širka", email = "petersirka@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/totaljs/pytotal"
